# ResumeAI

./: README.md  pyproject.toml
resume_ai/: config.json  main.py
resume_ai/app/: config.json  constants.py  funcs.py  models.py  prompts.py
resume_ai/app/app_data/resumes_yaml/: Darth_Vader__Google_hiring_Business_Intelligence_Analyst_Market_Intelligence_Google_Public_Sector_in_Sunnyvale_CA__LinkedIn_CV.yaml  Darth_Vader__OpenAI_hiring_Project_Coordinator_Global_Affairs_in_San_Francisco_CA__LinkedIn_CV.yaml
resume_ai/app/classes/: context.py  cover_letter_creator.py  job_manager.py  resume_creator.py  sqlite_logger.py  url_crawler.py
resume_ai/app/clients/: base_llm_client.py  bedrock_client.py  openai_client.py
resume_ai/app/user_data/: user_data.py
resume_ai/app/user_data/job_descriptions/: job_links.json
resume_ai/app/user_data/job_descriptions_processed/: Senior Data Quality Expert.txt  job1.txt
resume_ai/app/user_data/jobs_processed/: jobs_processed.json
resume_ai/user_data/: user_profile_1.yaml
resume_ai/user_data/jobs/: Salesforce Developer.txt  jobs.json
